// 2.55 Change Log
// Updated 5th June, 2020

//Alpha 73
Build now 51, Alpha now 73
Fixed issues where the old system for calculating STEP for sprites from
	scripts produced incorrect values, including slow projectiles and
	breaking ghost.zh sine wave weapons.
Disabled the rule qr_STEP_IS_FLOAT on quest load for quests made before this version.
	( ZoriaRPG, 5th June, 2020 )
	
//Alpha 72
2.10 Water/Ladder is now set by default on loading a 2.10.x quest.
	( ZoriaRPG, 4th June, 2020 )
	
Made a slight reversion to fix Module>>Ignore.
	This still creates a visual glitch when creating a quest slot
	that uses a quest keyword, however this lasts for only the duration
	of the popup dialogue, and can probably be fixed in the section
	where special quest icons (e.g. 2nd, 3rd, 4th) are loaded.	
	
Moved the config to ignore internal quests to moduledata, and added
	a menu option to ignore them. This now triggers a popup, but cancel out of
	that popup opens a new popup.
	( ZoriaRPG, 1st June, 2020 )
	
Allow auto-popup of choose qst dlg on creating new save
Re-tab title.cpp
	( Venrob, 30th May, 2020 )

Added functional code for Iron Boots and Step Combos.
	Step Bombos now have a 'Heavy Flag'. They are not triggered unless
	the player has a boots item with the 'Iron' flag enabled.
std.zh v1.7053: Added bool HasHeavyBoots()
Fixed a compilation error due to copy/paste from 2.53.
	( ZoriaRPG, 30th May, 2020 )
	
Fix combo scripts re-initializing every frame.
Fix GSymbols error which caused compile errors in ZQ
Fix crashes relating to combo scripts
	( Venrob, 26th May, 2020 )
	
Slight change to 2.10 water emulation description dialogue.
Added '2.10 Water/Ladder Up/Down' emulation to ZC Player.
	This is intended as a patch for old 2.10 quests that have
	very-specific water combo placement where you are expected
	to use the ladder (while you have the flippers), but the flippers
	engage before the ladder deploys, when facing up or down.
	( ZoriaRPG, 26th May, 2020 )
	