@@ -2982,6 +2982,7 @@ void draw_grab_scr(int tile,int cs,byte *newtile,int black,int white, int width,
         tiledata *hold = newtilebuf;
         newtilebuf = grabtilebuf;
         //fixme
+	imagey = vbound(imagey, 0, MAXTILEROWS); //fixed -Z This can no longer crash if you scroll past the end of the tile pages. 6th June, 2020
         int t=imagey*TILES_PER_ROW;
         
         for(int i=0; i<200; i++)                              // 10 rows, down to y=160
